--- a/5e_artisanal_database/generators/relics/index.html
+++ b/5e_artisanal_database/generators/relics/index.html
@@ -43,37 +43,16 @@
     <em>Click the button above to generate content...</em>
 </div>
 
+<!-- Load shared common data -->
+<script src="../../css_js/common_conditions.js"></script>
+<script src="../../css_js/common_origins.js"></script>
+<script src="../../css_js/common_items.js"></script>
 <script src="../../css_js/spell_index.js"></script>
 <script>
-// Relic data arrays - extracted from the generator_text.js template format
-const conditions = [
-    'aberrant', 'abyssal', 'acidic', 'ancient', 'astral', 'bladed', 'bloody', 'buried', 'cracked', 'crumbling',
-    'crystalline', 'cursed', 'cyclopean', 'defiled', 'dreamscape', 'earthen', 'eldritch', 'emerald', 'entombed',
-    'ethereal', 'flaming', 'floating', 'flooded', 'foggy', 'frozen', 'glass', 'glowing', 'glyphed', 'hallowed',
-    'haunted', 'holy', 'infested', 'lightning-touched', 'moontouched', 'musical', 'necrotic', 'obsidian',
-    'oozing', 'opal', 'poisonous', 'psionic', 'radiant', 'ruby', 'ruined', 'sapphire', 'shadowy', 'spiked',
-    'startouched', 'stormy', 'temporal', 'titanic', 'twilight', 'unearthed', 'unhallowed', 'unholy'
-];
-
-const items = [
-    'amulet', 'arrowhead', 'badge', 'bell', 'bird skull', 'bone', 'bottle', 'bowl', 'box', 'bracelet',
-    'brooch', 'buckle', 'candle', 'clock', 'coin', 'crown', 'crystal', 'cup', 'dagger', 'die', 'disc',
-    'doll', 'earring', 'egg', 'fan', 'feather', 'figurine', 'finger bone', 'flute', 'forked rod',
-    'game piece', 'gemstone', 'glass eye', 'glove', 'goblet', 'hammer', 'holy symbol', 'icon', 'idol',
-    'insignia', 'jar', 'jeweled egg', 'jewelry box', 'key', 'knife', 'lamp', 'lantern', 'mask',
-    'medallion', 'mirror', 'monocle', 'mummified finger', 'music box', 'necklace', 'opal', 'orb', 'pipe',
-    'pipes', 'portrait', 'pouch of dust', 'quill', 'ring', 'rod', 'scale', 'scrimshaw', 'scroll', 'shard',
-    'skull', 'snuffbox', 'sphere', 'spike', 'statue', 'statuette', 'stone', 'stone disk', 'string of beads',
-    'swordhilt', 'symbol', 'talon', 'tiara', 'tile', 'tooth', 'urn', 'vial', 'wand', 'whistle', 'ink pen',
-    'dreamcatcher'
-];
-
-const races = [
-    'human', 'elven', 'dwarven', 'halfling', 'gnomish', 'dragonborn', 'orcish', 'bestial', 'primordial',
-    'gearforged', 'constructed', 'elemental', 'draconic', 'fiendish', 'giant', 'shadow-touched', 'aberrant',
-    'fungoid', 'goblinoid', 'infernal', 'celestial', 'outerplanar', 'faerie', 'monstrous', 'ooze-touched',
-    'undead', 'plant-touched', 'minotaur', 'shadowborn', 'serpentine'
-];
+// Use shared data for conditions, species, and items
+const conditions = commonConditions;
+const races = commonOrigins;
+const items = commonItems;
 
 // Simple random picker
 function getRandomElement(array) {
