--- a/5e_artisanal_database/generators/armor/index.html
+++ b/5e_artisanal_database/generators/armor/index.html
@@ -94,7 +94,7 @@ function getSpellFromSourceAndRarity(source, rarity) {
                 const levelText = randomLevel === "0" ? "Cantrip" : `${randomLevel}${getOrdinalSuffix(randomLevel)} level`;
                 const spellLink = getSpellLink(spellName, source);
                 
-                return `<em><a href="${spellLink}" target="_blank">${spellName}</a></em> (${levelText}, ${stats.rarity}, DC ${stats.dc}, Mod +${stats.attack})`;
+                return `<em><a href="${spellLink}" target="_blank">${spellName}</a></em> (${levelText}, ${stats.rarity}, DC ${stats.dc}, +${stats.attack} Spell Attack)`;
             }
         }
     }
